--- a/Invoicing/docker-compose.yml
+++ b/Invoicing/docker-compose.yml
@@ -21,6 +21,18 @@ services:
     depends_on:
       - db 
 
+  nginx:
+    build:
+      context: ./nginx
+    container_name: nginx-container
+    ports:
+      - "80:80"
+    networks:
+      - invoice-network
+    depends_on:
+      - web
+
+
 networks:
   invoice-network:
     driver: bridge
