--- a/Invoicing/nginx/nginx.conf
+++ b/Invoicing/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name www.invoice-generator.com;
 
     location / {
         proxy_pass http://web:8200;
@@ -9,4 +9,12 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+}
+
+# Default server block to handle undefined server names
+server {
+    listen 80 default_server;
+    server_name _;
+
+    return 404;
 }
