--- a/Invoicing/nginx/Dockerfile
+++ b/Invoicing/nginx/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Nginx image from Docker Hub
-FROM nginx
+FROM nginx:latest
 
 # Remove the default Nginx configuration file
 RUN rm /etc/nginx/conf.d/default.conf
