--- a/Invoicing/nginx-docker/Dockerfile
+++ b/Invoicing/nginx-docker/Dockerfile
@@ -1,5 +1,5 @@
 # Use the official Nginx image from Docker Hub
-FROM nginx:latest
+FROM nginx
 
 # Remove the default Nginx configuration file
 RUN rm /etc/nginx/conf.d/default.conf
