--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name www.invoice-generator-paras.com;
+    server_name localhost;
 
     location / {
         proxy_pass http://web:8200;
