--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -3,7 +3,7 @@ server {
     server_name _;
 
     location / {
-        proxy_pass http://web:34.229.207.104:8200;  # Make sure this matches the service name and port of your 'web' service
+        proxy_pass http://34.229.207.104:8200;  # Make sure this matches the service name and port of your 'web' service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
