--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -1,9 +1,9 @@
 server {
-    listen 81;
-    server_name _;
+    listen 80;
+    server_name localhost;
 
     location / {
-        proxy_pass http://34.229.207.104:8200;  # Make sure this matches the service name and port of your 'web' service
+        proxy_pass http://web:8200;  # Make sure this matches the service name and port of your 'web' service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -13,7 +13,7 @@ server {
 
 # Default server block to handle undefined server names
 server {
-    listen 81 default_server;
+    listen 80 default_server;
     server_name _;
 
     return 404;
