--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -2,8 +2,11 @@ server {
     listen 80;
     server_name localhost;
 
-    location / {
-        proxy_pass http://web:8200;  # Make sure this matches the service name and port of your 'web' service
+    root /usr/share/nginx/html;  # Make sure this points to the directory containing index.html
+    index index.html;
+
+    location /api {
+        proxy_pass http://web:8200;  # Proxying API requests to the web service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
