--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -5,7 +5,15 @@ server {
     root /usr/share/nginx/html;  # Make sure this points to the directory containing index.html
     index index.html;
 
-    location /api {
+    location / {
+        proxy_pass http://34.229.207.104:8200;  # Proxying API requests to the web service
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+      location /api {
         proxy_pass http://web:8200;  # Proxying API requests to the web service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
