--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -6,7 +6,7 @@ server {
     index index.html;
 
     location / {
-        proxy_pass http://34.229.207.104:8200;  # Proxying API requests to the web service
+        proxy_pass http://invoice-generator-app-container:8200;  # Proxying API requests to the web service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -14,7 +14,7 @@ server {
     }
 
       location /api {
-        proxy_pass http://web:8200;  # Proxying API requests to the web service
+        proxy_pass http://invoice-generator-app-container:8200;  # Proxying API requests to the web service
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
