--- a/Invoicing/nginx-docker/Dockerfile
+++ b/Invoicing/nginx-docker/Dockerfile
@@ -1,6 +1,12 @@
 # Use the official Nginx image from Docker Hub
 FROM nginx
 
+# Install necessary utilities including netcat
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    netcat \
+    && rm -rf /var/lib/apt/lists/*
+
 # Remove the default Nginx configuration file
 RUN rm /etc/nginx/conf.d/default.conf
 
