--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -6,15 +6,15 @@ server {
     index index.html;
 
     location / {
-        proxy_pass http://web:invoice-generator-app-container:8200;  # Proxying API requests to the web service
+        proxy_pass http://application-container:8200;  # Proxying requests to the application
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-      location /api {
-        proxy_pass http://db:invoice-generator-postgres-container:5432;  # Proxying API requests to the web service
+    location /api {
+        proxy_pass http://postgresql-container:5432;  # Proxying requests to PostgreSQL
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
