--- a/Invoicing/postgresql_psycopg2_database/Dockerfile
+++ b/Invoicing/postgresql_psycopg2_database/Dockerfile
@@ -1,3 +1,4 @@
+#------------------------ Dockerfile ---------------------------------------#
 # Use the official PostgreSQL image from the Docker Hub
 FROM postgres:13
 
