--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location /api {
-        proxy_pass http://postgresql-container:5432;  # Proxying requests to PostgreSQL
+        proxy_pass http://invoice-generator-postgres-container:5432;  # Proxying requests to PostgreSQL
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
