--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -6,7 +6,7 @@ server {
     index index.html;
 
     location / {
-        proxy_pass http://application-container:8200;  # Proxying requests to the application
+        proxy_pass http://invoice-generator-container:8200;  # Proxying requests to the application
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
