--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
 
     root /usr/share/nginx/html;  # Make sure this points to the directory containing index.html
     index index.html;
