--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -1,31 +1,50 @@
+# nginx.conf
+
+# HTTP server
 server {
     listen 80;
-    server_name _;
+    server_name localhost;
 
-    root /usr/share/nginx/html;  # Make sure this points to the directory containing index.html
+    # Root directory for static files (adjust path as needed)
+    root /usr/share/nginx/html;
     index index.html;
 
+    # Proxying requests to the application container
     location / {
-        proxy_pass http://invoice-generator-container:8100;  # Proxying requests to the application
+        proxy_pass http://invoice-generator-container:8100;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Include necessary proxy settings if needed
+        # proxy_redirect off;
+        # proxy_buffering off;
+        # proxy_set_header Upgrade $http_upgrade;
+        # proxy_set_header Connection "upgrade";
     }
 
+    # Proxying API requests to the PostgreSQL container
     location /api {
-        proxy_pass http://invoice-generator-postgres-container:5432;  # Proxying requests to PostgreSQL
+        proxy_pass http://invoice-generator-postgres-container:5432;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-}
 
-# Default server block to handle undefined server names
-server {
-    listen 80 default_server;
-    server_name _;
+    # Error handling for the server block
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
 
-    return 404;
+    # Default server block to handle undefined server names
+    # Remove if not needed or adjust as necessary
+    # server {
+    #     listen 80 default_server;
+    #     server_name _;
+
+    #     return 404;
+    # }
 }
