--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -1,5 +1,6 @@
 # nginx.conf
 
+# --------------------------------------- for docker-compose ------------------------------------------
 # HTTP server
 server {
     listen 80;
@@ -11,7 +12,7 @@ server {
 
     # Proxying requests to the application container
     location / {
-        proxy_pass http://invoice-generator-container:8100;
+        proxy_pass http://web:invoice-generator-container:8200;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -26,7 +27,7 @@ server {
 
     # Proxying API requests to the PostgreSQL container
     location /api {
-        proxy_pass http://invoice-generator-postgres-container:5432;
+        proxy_pass http://db:invoice-generator-postgres-container:5432;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -47,4 +48,43 @@ server {
 
     #     return 404;
     # }
+}
+
+
+# --------------------------------------- for docker-compose ------------------------------------------
+# HTTP server
+server {
+    listen 80;
+    server_name localhost;
+
+    # Root directory for static files (adjust path as needed)
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Proxying requests to the application container
+    location / {
+        proxy_pass http://invoice-generator-container:8100;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+
+    }
+
+    # Proxying API requests to the PostgreSQL container
+    location /api {
+        proxy_pass http://invoice-generator-postgres-container:5432;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Error handling for the server block
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+
 }
