--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -51,40 +51,40 @@ server {
 }
 
 
-# --------------------------------------- for docker-compose ------------------------------------------
-# HTTP server
-server {
-    listen 80;
-    server_name localhost;
+# --------------------------------------- for dockerfile ------------------------------------------
+# # HTTP server
+# server {
+#     listen 80;
+#     server_name localhost;
 
-    # Root directory for static files (adjust path as needed)
-    root /usr/share/nginx/html;
-    index index.html;
+#     # Root directory for static files (adjust path as needed)
+#     root /usr/share/nginx/html;
+#     index index.html;
 
-    # Proxying requests to the application container
-    location / {
-        proxy_pass http://invoice-generator-container:8100;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+#     # Proxying requests to the application container
+#     location / {
+#         proxy_pass http://invoice-generator-container:8100;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
 
 
-    }
+#     }
 
-    # Proxying API requests to the PostgreSQL container
-    location /api {
-        proxy_pass http://invoice-generator-postgres-container:5432;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+#     # Proxying API requests to the PostgreSQL container
+#     location /api {
+#         proxy_pass http://invoice-generator-postgres-container:5432;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
 
-    # Error handling for the server block
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
+#     # Error handling for the server block
+#     error_page 500 502 503 504 /50x.html;
+#     location = /50x.html {
+#         root /usr/share/nginx/html;
+#     }
 
-}
+# }
