--- a/Invoicing/docker-compose.yml
+++ b/Invoicing/docker-compose.yml
@@ -41,11 +41,10 @@ services:
     networks:
       - invoice-network
     depends_on:
-      web:
-        condition: service_healthy
+      - web
     volumes:
-      - ./nginx-docker/html:/usr/share/nginx/html  # Ensure this points to your website files
-    entrypoint: ["/wait-for-it.sh", "web:8200", "--", "/docker-entrypoint.sh"]
+      - ./nginx-docker/html:/usr/share/nginx/html
+    entrypoint: ["./wait-for-it.sh", "web:8200", "--", "/entrypoint_docker-compose.sh"]
 
 networks:
   invoice-network:
