--- a/Invoicing/docker-compose.yml
+++ b/Invoicing/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - web
     volumes:
       - ./nginx-docker/html:/usr/share/nginx/html
-    entrypoint: ["./wait-for-it.sh", "web:8200", "--", "nginx", "-g", "daemon off"]
+    entrypoint: ["./wait-for-it.sh", "invoice-generator-container", "8200", "--", "nginx", "-g", "daemon off;"]
 
 networks:
   invoice-network:
