--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     # Proxying requests to the application container
     location / {
-        proxy_pass http://web:invoice-generator-container:8200;
+        proxy_pass http://web:8200;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -27,7 +27,7 @@ server {
 
     # Proxying API requests to the PostgreSQL container
     location /api {
-        proxy_pass http://db:invoice-generator-postgres-container:5432;
+        proxy_pass http://db:5432;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
