--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -4,7 +4,7 @@
 # HTTP server
 server {
     listen 80;
-    server_name localhost;
+    server_name www.paras-bhaiya.com;
 
     # Root directory for static files (adjust path as needed)
     root /usr/share/nginx/html;
