--- a/Invoicing/nginx-docker/Dockerfile
+++ b/Invoicing/nginx-docker/Dockerfile
@@ -17,13 +17,16 @@ COPY wait-for-it.sh /wait-for-it.sh
 RUN chmod +x /wait-for-it.sh
 
 # Copy the custom Nginx configuration file
-COPY nginx.conf /etc/nginx/conf.d/
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY fullchain.txt /etc/nginx/ssl/fullchain.pem
+COPY privkey.txt /etc/nginx/ssl/privkey.pem
 
 # Copy website files to the default Nginx HTML directory
 COPY index.html /usr/share/nginx/html/
 
 # Expose ports (optional, as it's defined in docker-compose.yml)
 EXPOSE 80
+EXPOSE 443
 
 # CMD to start Nginx when the container starts
 CMD ["nginx", "-g", "daemon off;"]
