--- a/Invoicing/Jenkinsfile
+++ b/Invoicing/Jenkinsfile
@@ -190,7 +190,7 @@ pipeline {
                 // Run SonarQube analysis
                 withSonarQubeEnv('SonarQubeInvoice') {
                     def scannerHome = tool 'SonarQubeInvoice'
-                    sh "${scannerHome}/bin/sonar-scanner -Dsonar.projectName=Invoice-Generator -Dsonar.projectKey=Invoice-Generator -Dsonar.verbose=true -Dsonar.analysis.buildNumber=${BUILD_NUMBER} > sonarqubeQualityReport.txt"
+                    sh "${scannerHome}/bin/sonar-scanner -Dsonar.projectName=Invoice-Generator -Dsonar.projectKey=Invoice-Generator -Dsonar.verbose=true -Dsonar.analysis.buildNumber=${BUILD_NUMBER} > /sonarqubeQualityReports/sonarqubeQualityReport.txt"
                 }
             }
         }
@@ -202,7 +202,7 @@ pipeline {
             script {
                 // Ensure Trivy scans the specified project directory
                 dir('/var/lib/jenkins/workspace/invoice-generator-CICD-pipeline/Invoicing') {
-                sh 'trivy fs --security-checks vuln,config --format table -o trivy-fs-report.html .'
+                sh 'trivy fs --security-checks vuln,config --format table -o /trivy-fs-report/trivy-fs-report.html .'
             }
         }
     }
@@ -234,7 +234,7 @@ pipeline {
                 ).trim().split("\n")
 
                 images.each { image ->
-                    sh "trivy image --severity HIGH,CRITICAL --format table -o trivy-image-report-${image.replaceAll('/', '-')}.html ${image}"
+                    sh "trivy image --severity HIGH,CRITICAL --format table -o /trivy-image-report/trivy-image-report-${image.replaceAll('/', '-')}.html ${image}"
                 }
             }
         }
