--- a/Invoicing/docker-compose.yml
+++ b/Invoicing/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - "5432:5432"
     networks:
       - invoice-network
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -38,6 +41,7 @@ services:
     container_name: nginx-container
     ports:
       - "80:80"
+      - "443:443"
     networks:
       - invoice-network
     depends_on:
@@ -49,6 +53,9 @@ services:
 networks:
   invoice-network:
     driver: bridge
+
+volumes:
+  postgres_data:
 
 # --------------------------------------------------------------------
 # version: '3.8'
