--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -1,7 +1,7 @@
 # nginx.conf
 
 # --------------------------------------- for docker-compose ------------------------------------------
-HTTP server
+#HTTP server
 server {
     listen 80;
     server_name localhost;
