--- a/Invoicing/nginx-docker/nginx.conf
+++ b/Invoicing/nginx-docker/nginx.conf
@@ -18,6 +18,16 @@ server {
     # SSL certificate configuration
     ssl_certificate /etc/nginx/ssl/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    
+    # SSL protocols and ciphers (adjust as necessary)
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    
+    # Security headers
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-XSS-Protection "1; mode=block";
 
     # Root directory for static files (adjust path as needed)
     root /usr/share/nginx/html;
